# GolfHMR-Fit

./: QUICKSTART.md  README.md  README_NEW.md  eval.py  pyproject.toml  requirements.txt
docs/: FINETUNE_STRATEGY.md
sam_3d_body/: sam_3d_body_estimator.py
sam_3d_body/models/heads/: mhr_head.py
sam_3d_body/models/meta_arch/: base_model.py  sam3d_body.py
sam_3d_body/utils/: finetune_param_groups.py  hand_constraints.py
tests/: test_hand_constraints.py  test_training_step_syntax.py  test_unrelated.py
